[package]
name = "gugugu"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-abort = "0.3.2"
libc = { version = "0.2.81", default-features = false }
no-std-compat = "0.4.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
