[package]
name = "gugugu"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8", features = [ "attributes" ] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
# panic = 'abort'
